--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,20 @@
 .aboutContainer {
   background-color: #fff;
-  color: whitesmoke;
+  color: #111;
   height: 100vh;
+  padding-top: 150px;
+
+}
+
+.meeting {
+  color: #111;
+  font-size: 2.5em;
+  font-weight: 400;
+  left: 25%;
+  position: absolute;
+  top: 350px;
+}
+
+.meeting h1{
+  animation: opac infinite ease-in-out 1.5s;
 }
