--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,5 +1,6 @@
 .skillsContainer {
-  background-color: #00C2CB;
+  background-color: #111;
+  color: whitesmoke;
   height: 100vh;
   padding-top: 200px;
 
