--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,5 +1,5 @@
 .projectsContainer {
-  background-color: rgb(14, 13, 13);
+  background-color: #00C2CB;
   color: whitesmoke;
   height: 100vh;
   padding-top: 200px;
